# rusm64

./: Cargo.toml  README.md
.github/workflows/: rust-test.yml
examples/: advanced.asm  hello.asm  minimal.asm  simple.asm  test.asm  test.prg
src/: lib.rs  main.rs
src/assembler/: mod.rs  opcodes.rs
src/ast/: addressingmode.rs  ast.rs  comment.rs  directive.rs  expr.rs  instruction.rs  label.rs  line.rs  mod.rs  op.rs  opcode.rs  operand.rs
src/parser/: assembly.pest  grammar.rs  mod.rs
src/parser/grammar/: error.rs  mod.rs  rusm64.pest
tests/: parser.rs
